--- a/css/app.css
+++ b/css/app.css
@@ -68,7 +68,18 @@ body .silencer-app-title {
   height: 25px; /* Slider handle height */
   background: #b5c18f; /* Green background */
   border-radius: 50%;
-  cursor: pointer; /* Cursor on hover */
+  cursor: pointer; /* Cursor on hover */  
+}
+
+.vignent {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+
+  background: rgb(238,174,202);
+  background: radial-gradient(circle, rgba(238,174,202,0) 0%, rgba(0,1,3,1) 100%);
 }
 
 .slider::-moz-range-thumb {
@@ -119,6 +130,7 @@ body.shhh .quote-container {
   display: none;
   align-items: center;
   justify-content: center;
+  z-index: 2;
 }
 
 .quote {
